# floating-point-functions

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  format.sh
include/: functions.hpp  functions_implementation.hpp
source/: functions.cpp
test/: exponentTests.cpp
